[gd_scene load_steps=3 format=3 uid="uid://be3qy4vhm7xka"]

[ext_resource type="Script" path="res://scenes/components/LevelEntrance.gd" id="1_9k2mq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(80, 80)

[node name="LevelEntrance" type="StaticBody2D"]
script = ExtResource("1_9k2mq")

[node name="Background" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.4, 0.4, 0.8, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="LevelNameLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -30.0
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = -60.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 80.0
text = "Level Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InteractionArea" type="Area2D" parent="."]

[node name="InteractionCollision" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_1")

[node name="LockOverlay" type="ColorRect" parent="."]
visible = false
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.6, 0.2, 0.2, 0.8)

[node name="LockIcon" type="Label" parent="LockOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
text = "ðŸ”’"
horizontal_alignment = 1
vertical_alignment = 1